<resources>
    <string name="app_name">Sagara Logboek</string>
    <string name="login_icon">App Icon</string>
    <string name="login_server_edittext">Server Address</string>
    <string name="login_user_edittext">User</string>
    <string name="login_password_edittext">Password</string>
    <string name="login_button">Login</string>
    <string name="title_activity_main">Logboek</string>
    <string name="action_settings">Settings</string>
    <string name="prefs_Main">nl.audioware.sagaralogger.MainPrefs</string>
    <string name="prefs_Pub">nl.audioware.sagaralogger.PubPrefs</string>
    <string name="title_activity_item">ItemActivity</string>
    <string name="action_fav_title">Favorite</string>
    <string name="notification_status_title">Aan het varen</string>
    <string name="notification_status_message">De boot \"%1$s\" is aan het varen</string>
    <string name="title_activity_admin">AdminActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
</resources>
