<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login_constrain"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/login_root"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:theme="@style/AppThemeLogin"
        tools:context="nl.audioware.sagaralogboek.Activities.LoginActivity">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/section_img"
                android:layout_width="192dp"
                android:layout_height="192dp"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:layout_gravity="center"
                android:adjustViewBounds="false"
                android:background="@mipmap/ic_launcher_round"
                android:contentDescription="@string/login_icon"
                android:cropToPadding="false"
                android:scaleType="fitCenter" />

        </RelativeLayout>


        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="bottom"
            android:layout_margin="5dp"
            android:layout_weight="2"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/ServerAddressET"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/login_server_edittext"
                    android:inputType="textUri"
                    android:text="audioware.nl/webtest/SagaraLogboek" />

                <EditText
                    android:id="@+id/UserET"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/login_user_edittext"
                    android:inputType="textNoSuggestions" />

                <EditText
                    android:id="@+id/PasswordET"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/login_password_edittext"
                    android:inputType="textPassword" />

                <Button
                    android:id="@+id/LoginButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/login_button" />
            </LinearLayout>


        </android.support.v7.widget.CardView>

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical" />

    </LinearLayout>
</android.support.constraint.ConstraintLayout>